--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
         </section>
 
         <section>
+          <img class="no-border" src="img/idisttrict.jpg" />
+          <div class="footer text-muted">Source: <a href='https://www.flickr.com/photos/prayitnophotography/5271448735/in/photolist-92Py4a-sqcQh3-b5Mzc4-e595K7-e53sFp-FxV4wt-rKL5-hvg1qF-e54JLz-e595bs-agLppZ-e58Xhm-grfbxQ-oLTeeU-jgr8Fy-e5aCQ7-e53CTa-gYUt-jGkgsp-bsU49T-87S2XG-q8wLAc-e53msi-bt8wGS-greNAy-r5eUVb-e54Lcp-e53uop-e591NA-b9hh2X-bayaWR-eUMiWW-e59hsS-e53G7c-bFSTXt-dTbLcw-e53pqZ-grggNB-e53tw8-e53BYc-e53EN6-e53qtR-34Uj2c-2WyVQg-5ArcpW-e55uip-baybFM-e58WnY-e599pu-rvtGQr'>Flickr</a></div>
+        </section>
+
+        <section>
           <img class="no-border" src="img/pokedroid_icon.png"/>
         </section>
 
@@ -166,8 +171,12 @@
 				</section>
 
         <section>
-          <h4>What made Pokédroid unique:</h4>
-          <h3 class="fragment">#1: Offline!</h3>
+          <h4>What Pokédroid had that no others did:</h4>
+          <h2 class="fragment">OFFLINE!</h2>
+        </section>
+
+				<section>
+          <video src="vid/pokedroid-longer-demo-1.webm" height="600" ></video>
         </section>
 
         <section>
@@ -197,14 +206,15 @@
         </section>
 
         <section>
+          <video src="vid/pokedroid-longer-demo-2.webm" height="600" ></video>
+        </section>
+
+        <section>
           <h3>3.5MB SQLite database</h3>
           <img class="no-border" src="img/pokedex-sqlite.png" style="max-height:600px"/>
         </section>
 
-        <section>
-          <video src="vid/pokedroid-longer-demo-2.webm" height="600" ></video>
-        </section>
-
+<!--
         <section>
           <h4>What made Pokédroid unique:</h4>
           <h3 class="fragment">#2: Responsive & mobile-optimized</h3>
@@ -218,7 +228,7 @@
             <em>– Google Play Store review</em>
           </div>
         </section>
-
+-->
         <!--
         <section>
           <blockquote class="speech bubble">
@@ -231,10 +241,7 @@
         </section>
         -->
 
-        <section>
-          <video src="vid/pokedroid-longer-demo-1.webm" height="600" ></video>
-        </section>
-
+<!--
         <section>
           <h4>What made Pokédroid unique:</h4>
           <h3 class="fragment">#3: Used device APIs</h3>
@@ -244,7 +251,7 @@
           <video src="vid/pokedroid_live_demo.webm" height="600" controls></video>
         </section>
 
-
+-->
         <section>
           <h3>2011: Pokédroid DMCA'd <script>document.write('\uD83D\uDE22')</script></h3>
           <img class="no-border" src="img/pokedroid_pulled.png" width="1083"/>
@@ -259,6 +266,9 @@
           </ul>
         </section>
 
+        <section>
+          <h1>😢</h1>
+        </section>
         <section>
           <h3>In 2011, you could not build Pokédroid using web technology alone.</h3>
         </section>
