more images in slides

--- a/index.html
+++ b/index.html
@@ -266,16 +266,60 @@
           </ul>
         </section>
 
-        <section>
-          <h1>😢</h1>
-        </section>
-        <section>
+				<section>
           <h3>In 2011, you could not build Pokédroid using web technology alone.</h3>
         </section>
 
         <section>
-          <h3>2016: progressive web apps</h3>
+          <h2>RIP Pokédroid 😢</h2>
         </section>
+
+				<section>
+					<h2>The web! ❤️</h2>
+				</section>
+
+				<section>
+          <img class="no-border" src="img/html5.svg" height="500"/>
+        </section>
+
+				<section>
+					<img class="no-border" src="img/bruce_lawson.png" width="650"/>
+					<div class="footer text-muted">
+						Source: https://www.youtube.com/watch?v=YxQUxCsNomM
+					</div>
+				</section>
+
+				<section>
+
+					<blockquote class="speech bubble">
+						HTML [is] in direct competition with other technologies intended
+						for applications deployed over the web, in particular Flash and Silverlight.
+					</blockquote>
+					<div class="text-muted">
+						<em>– Ian Hickson, 2009 (via Bruce Lawson)</em>
+					</div>
+				</section>
+
+				<section>
+					<img class="no-border" src="img/alex_russell_future.png" width="650"/>
+					<div class="footer text-muted">
+					  Source: https://www.youtube.com/watch?v=x7cfLDFVyHo
+					</div>
+				</section>
+
+				<section>
+
+					<blockquote class="speech bubble">
+						[The web] won on desktop, just in time for mobile to eat the world.
+					</blockquote>
+					<div class="text-muted">
+						<em>– Alex Russell, 2016</em>
+					</div>
+				</section>
+
+				<section>
+					<h3>2016: progressive web apps</h3>
+				</section>
 
         <section>
           <h4>Coined by Alex Russell of Google</h4>
@@ -295,14 +339,25 @@
         <section>
           <h3>Profile of a PWA</h3>
           <ul>
-            <li>Works offline</li>
-            <li>Launches from home screen</li>
-            <li>"Feels" like a native app</li>
-            <li>Push notifications (optional)</li>
-            <li>Background sync (optional)</li>
+            <li class="fragment">Works offline</li>
+            <li class="fragment">Launches from home screen</li>
+            <li class="fragment">"Feels" like a native app</li>
+            <li class="fragment">Push notifications (optional)</li>
+            <li class="fragment">Background sync (optional)</li>
           </ul>
         </section>
 
+				<section>
+					<h3>What changed?</h3>
+					<ul>
+						<li class="fragment">AppCache → ServiceWorker</li>
+						<li class="fragment">LocalStorage/WebSQL → IndexedDB</li>
+						<li class="fragment">Touch icons → Web App Manifest</li>
+						<li class="fragment">Save to homescreen → installable webapp</li>
+					</ul>
+				</section>
+
+<!--
         <section>
           <video height="600" src="vid/voicememos1.webm" />
         </section>
@@ -319,22 +374,9 @@
           <video height="600" src="vid/voicememos4.webm" />
         </section>
 
-        <section>
-          <h3>What changed?</h3>
-        </section>
 
-        <section>
-          <ul>
-            <li>AppCache → ServiceWorker</li>
-            <li>LocalStorage/WebSQL → IndexedDB</li>
-            <li>Touch icons → Web App Manifest</li>
-            <li>Save to homescreen → installable webapp</li>
-          </ul>
-        </section>
+-->
 
-        <section>
-          <img class="no-border" src="img/html5.svg" height="500"/>
-        </section>
 
         <section>
           <video src="vid/pokedex-blog-2.webm" height="600"/>
@@ -356,6 +398,10 @@
           <h4>Galaxy Nexus (2011), Android 4.3</h4>
           <video src="vid/pokedex-galaxy-nexus.webm" height="600"/>
         </section>
+
+        <section>
+					<img src="img/pokedex_architecture.png"/>
+				</section>
 
         <section>
           <h3>In 2011, you couldn't build a high-performance, immersive
