--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<body>
 
 		<div class="reveal">
-			<table class="slides">
+			<div class="slides">
 				<section>
           <h2>Progressive web apps</h2>
           <h3>A love story</h3>
