add a bunch of changes

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-          <h2>Progressive web apps</h2>
-          <h3>A love story</h3>
-          <div class="footer text-muted">@nolanlawson</div>
+          <h3>Progressive web apps:<br/>a love story</h3>
+          <img src="img/logo-webrebels.png" class="no-border" width="200"/>
+          <h4 class="footer" style="font-size:24px;">@nolanlawson</h4>
           <aside class="notes">
             Hi everybody.
           </aside>
@@ -173,7 +173,7 @@
 				</section>
 
         <section>
-          <h4>What Pokédroid had that no others did:</h4>
+          <h4>What made Pokédroid unique:</h4>
           <h2 class="fragment">OFFLINE!</h2>
         </section>
 
@@ -285,7 +285,7 @@
         </section>
 
 				<section>
-          <h4>Bruce Lawson – Progressive webapps <br/> and the future of the web</h4>
+          <h4>Bruce Lawson – Progressive web apps <br/> and the future of the web</h4>
 					<img class="no-border" src="img/bruce_lawson.png" width="650"/>
 					<div class="footer text-muted">
 						Source: https://www.youtube.com/watch?v=YxQUxCsNomM
@@ -304,7 +304,7 @@
 				</section>
 
 				<section>
-          <h4>Alex Russell – Progressive webapps</h4>
+          <h4>Alex Russell – Progressive web apps</h4>
 					<img class="no-border" src="img/alex_russell_future.png" width="650"/>
 					<div class="footer text-muted">
 					  Source: https://www.youtube.com/watch?v=x7cfLDFVyHo
@@ -322,7 +322,7 @@
 				</section>
 
 				<section>
-					<h3>2016: progressive web apps</h3>
+					<h3>2016: Progressive Web Apps (PWAs)</h3>
 				</section>
 
         <section>
@@ -336,7 +336,6 @@
         </section>
 
         <section>
-          <h4>Alex Russell</h4>
           <img src="img/alex_russell.png"/>
         </section>
 
@@ -350,19 +349,18 @@
             <li class="fragment">Background sync (optional)</li>
           </ul>
         </section>
-<!--
+
 				<section>
 					<h3>What changed?</h3>
-					<table>
+					<table class="pretty-table">
             <tbody>
-              <tr><td>AppCache</td><td>→</td><td>ServiceWorker</td></tr>
-              <tr><td>LocalStorage/WebSQL</td><td>→</td><td>IndexedDB</td></tr>
-              <tr><td>Touch icons</td><td>→</td><td>Web App Manifest</td></tr>
-              <tr><td>Save to homescreen</td><td>→</td><td>installable webapp</td></tr>
+              <tr class="fragment"><td>ApplicationCache</td><td>→</td><td>ServiceWorker</td></tr>
+              <tr class="fragment"><td>LocalStorage/WebSQL</td><td>→</td><td>IndexedDB</td></tr>
+              <tr class="fragment"><td>Touch icons</td><td>→</td><td>Web App Manifest</td></tr>
+              <tr class="fragment"><td>Save to homescreen</td><td>→</td><td>Install banner</td></tr>
             </tbody>
 					</table>
 				</section>
-        -->
 
 <!--
         <section>
@@ -437,9 +435,19 @@
         </section>
 
         <section>
-          <h2>Thanks!</h2>
-					<h4>http://nolanlawson.github.io/webrebels-2016</h4>
-           <div><small class="text-muted">http://stackoverflow.com/tags/progressive-web-apps/info<br/>http://www.pocketjavascript.com/blog/2015/11/23/introducing-pokedex-org</small></div>
+          <h3>Thanks! &#x1f44b;</h3>
+          <img class="pixel-image no-border" src="img/pikahu-waves.gif" width="300"/>
+          <div style="margin-top:15px;">
+            <h4>@nolanlawson &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; bit.ly/1TPcgC8</h4>
+          </div>
+          <div class="footer text-muted short-list" style="transform:translateY(90px);">
+            <ul>
+              <li>http://stackoverflow.com/tags/progressive-web-apps/info</li>
+              <li>http://www.pocketjavascript.com/blog/2015/11/23/introducing-pokedex-org</li>
+              <li>http://nolanlawson.com/2016/02/08/how-to-think-about-databases/</li>
+            </ul>
+            <p>Pokémon is &copy; Nintendo, The Pokémon Company, and GameFreak</p>
+          </div>
         </section>
 
       </div>
