--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
 
         <section>
-          <h3>Flashback to 2010</h3>
+          <h3>2010</h3>
         </section>
 
         <section>
@@ -101,8 +101,8 @@
         </section>
 
         <section>
-          <img class="no-border" src="img/idisttrict.jpg" />
-          <div class="footer text-muted">Source: <a href='https://www.flickr.com/photos/prayitnophotography/5271448735/in/photolist-92Py4a-sqcQh3-b5Mzc4-e595K7-e53sFp-FxV4wt-rKL5-hvg1qF-e54JLz-e595bs-agLppZ-e58Xhm-grfbxQ-oLTeeU-jgr8Fy-e5aCQ7-e53CTa-gYUt-jGkgsp-bsU49T-87S2XG-q8wLAc-e53msi-bt8wGS-greNAy-r5eUVb-e54Lcp-e53uop-e591NA-b9hh2X-bayaWR-eUMiWW-e59hsS-e53G7c-bFSTXt-dTbLcw-e53pqZ-grggNB-e53tw8-e53BYc-e53EN6-e53qtR-34Uj2c-2WyVQg-5ArcpW-e55uip-baybFM-e58WnY-e599pu-rvtGQr'>Flickr</a></div>
+          <img class="no-border" src="img/idisttrict.jpg" style="transform:translateY(-40px);"/>
+          <div class="footer text-muted">Source: <a href='https://commons.wikimedia.org/wiki/File:Seattle_-_Chinatown_gate_04.jpg'>Wikimedia Commons</a>
         </section>
 
         <section>
@@ -110,11 +110,11 @@
         </section>
 
         <section>
-          <img class="no-border" src="img/android_market_pokedroid.png" height="650"/>
+          <video height="600" src="vid/pokedex1.webm" />
         </section>
 
         <section>
-          <video height="600" src="vid/pokedex1.webm" />
+          <img class="no-border" src="img/android_market_pokedroid.png" height="650"/>
         </section>
 
         <section>
@@ -271,14 +271,17 @@
 				<section>
           <h3>In 2011, you could not build Pokédroid using web technology alone.</h3>
         </section>
-
         <section>
           <h2>RIP Pokédroid &#x1F622;</h2>
         </section>
 
 				<section>
-					<h2>The web! &#x1F60D;</h2>
+					<h2>The web? &#x1F914;</h2>
 				</section>
+
+<section>
+<h2>The web! &#x1F60D;</h2>
+</section>
 
 				<section>
           <img class="no-border" src="img/html5.svg" height="500"/>
@@ -362,6 +365,9 @@
 					</table>
 				</section>
 
+<section>
+<img src="img/pokeapi.png" class="no-border"/>
+</section>
 <!--
         <section>
           <video height="600" src="vid/voicememos1.webm" />
