--- a/index.html
+++ b/index.html
@@ -352,6 +352,21 @@
             <li class="fragment">Background sync (optional)</li>
           </ul>
         </section>
+        <section>
+          <video height="600" src="vid/voicememos1.webm" />
+        </section>
+
+        <section>
+          <video height="600" src="vid/voicememos3-d.webm" />
+        </section>
+
+        <section>
+          <video height="600" src="vid/voicememos2.webm" />
+        </section>
+
+        <section>
+          <video height="600" src="vid/voicememos4.webm" />
+        </section>
 
 				<section>
 					<h3>What changed?</h3>
@@ -411,6 +426,10 @@
             <li class="fragment">Prefer offline</li>
             <li class="fragment">Use background threads</li>
           </ol>
+        </section>
+
+        <section>
+          <img class="no-border" src="img/pokedex-offline-arch.png"/>
         </section>
 
         <section>
