last last last tweaks

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<section>
 					<h4>@nolanlawson</h4>
 
-					<img class="no-border" src="img/me.jpg" alt="photo of Nolan Lawson"/>
+					<img class="no-border" src="img/nolan_twitter_profile.png" alt="photo of Nolan Lawson"/>
 
 					<aside class="notes">
 						I'm Nolan Lawson. Sometimes I make "here's how big of a sub sandwich I had for lunch" hands, or as Mariko taught me they're called in Japanese, "pottery hands" (ろくろ回す手).
@@ -307,6 +307,11 @@
 				</section>
 
 				<section>
+					<h4>Steve Jobs, "Thoughts on Flash" (2010)
+					<img src="img/thoughts_on_flash.png"/>
+				</section>
+
+				<section>
           <h4>Alex Russell – Progressive web apps</h4>
 					<img class="no-border" src="img/alex_russell_future.png" width="650"/>
 					<div class="footer text-muted">
@@ -380,6 +385,10 @@
 					</table>
 				</section>
 
+				<section>
+					<h2>Putting it all together</h2>
+				</section>
+
 <section>
 <img src="img/pokeapi.png" class="no-border"/>
 </section>
@@ -409,16 +418,29 @@
         </section>
 
         <section>
-          <video src="vid/pokedex-blog-1.webm" height="600"/>
-        </section>
-
-        <section>
-          <video src="vid/pokedex-blog-3.webm" height="600"/>
+          <video src="vid/pokedex-demo-full-3.webm" height="600"/>
         </section>
 
         <section>
           <video src="vid/pokedex-blog-4.webm" height="600"/>
         </section>
+
+<section>
+<h2>How?</h2>
+</section>
+				<section>
+					<h4>Server-side rendering</h4>
+					<img class="no-border" src="img/server-side-rendered.png" height="650"/>
+				</section>
+
+				<section>
+					<video src="vid/2g.webm" height="600"/>
+				</section>
+
+				<section>
+					<h4>FLIP animations</h4>
+					<video src="vid/pokedex-flip.webm" height="600"/>
+				</section>
 
         <section>
           <h3>Tips from a native mobile developer</h3>
@@ -465,11 +487,12 @@
           <div style="margin-top:15px;">
             <h4>@nolanlawson &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; bit.ly/1TPcgC8</h4>
           </div>
-          <div class="footer text-muted short-list" style="transform:translateY(90px);">
+          <div class="footer text-muted short-list" style="transform:translateY(110px);">
             <ul>
               <li>http://stackoverflow.com/tags/progressive-web-apps/info</li>
               <li>http://www.pocketjavascript.com/blog/2015/11/23/introducing-pokedex-org</li>
               <li>http://nolanlawson.com/2016/02/08/how-to-think-about-databases/</li>
+              <li>http://nolanlawson.com/2016/02/29/high-performance-web-worker-messages/</li>
             </ul>
             <p>Pokémon is &copy; Nintendo, The Pokémon Company, and GameFreak</p>
           </div>
